--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
       box-shadow: 0 0 12px rgba(0,0,0,0.4);
       text-align: center;
     }
-    .form-container h2 { margin-bottom: 10px; }
-    .form-container p { font-size: 0.9rem; margin-bottom: 30px; color: #b3b3cc; }
     .form-group { margin-bottom: 20px; text-align: left; }
     label { display: block; margin-bottom: 5px; font-weight: 600; }
     select, input, button {
@@ -43,7 +41,6 @@
       transition: opacity 0.2s ease;
     }
     button:disabled { opacity: 0.5; cursor: not-allowed; }
-    button:hover:not(:disabled) { opacity: 0.85; }
     .inline-selects { display: flex; justify-content: space-between; gap: 5px; }
     .inline-selects select { flex: 1; }
   </style>
@@ -51,30 +48,29 @@
 <body>
   <div class="form-container">
     <h2>个性命盘分析</h2>
-    <p>结合八字、人类图、星座、MBTI，探索你的真实个性</p>
     <form id="analysis-form">
       <div class="form-group">
         <label>出生日期</label>
         <div class="inline-selects">
-          <select id="birth-year" required></select>
-          <select id="birth-month" required></select>
-          <select id="birth-day" required></select>
+          <select id="birth-year"></select>
+          <select id="birth-month"></select>
+          <select id="birth-day"></select>
         </div>
       </div>
       <div class="form-group">
         <label>出生时间</label>
         <div class="inline-selects">
-          <select id="birth-hour" required></select>
-          <select id="birth-minute" required></select>
+          <select id="birth-hour"></select>
+          <select id="birth-minute"></select>
         </div>
       </div>
       <div class="form-group">
         <label for="birth-city">出生城市</label>
-        <input type="text" id="birth-city" placeholder="如：北京、上海、广州" required />
+        <input type="text" id="birth-city" placeholder="如：北京、上海、广州" />
       </div>
       <div class="form-group">
         <label for="mbti">MBTI 类型</label>
-        <select id="mbti" required>
+        <select id="mbti">
           <option value="">选择您的 MBTI 类型</option>
           <option>INFP</option><option>INFJ</option><option>ENFP</option><option>ENFJ</option>
           <option>INTP</option><option>INTJ</option><option>ENTP</option><option>ENTJ</option>
@@ -102,7 +98,6 @@
     for (let m = 1; m <= 12; m++) {
       monthSelect.innerHTML += `<option value="${String(m).padStart(2, '0')}">${m}月</option>`;
     }
-
     function updateDays() {
       const year = parseInt(yearSelect.value);
       const month = parseInt(monthSelect.value);
@@ -123,10 +118,10 @@
       minuteSelect.innerHTML += `<option value="${String(m).padStart(2, '0')}">${m}分</option>`;
     }
 
-    document.getElementById('analysis-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
+    document.getElementById('analysis-form').addEventListener('submit', async function(e) {
+      e.preventDefault();  // 第一行就阻止默认跳转！
 
-      if (submitBtn.disabled) return;
+      if (submitBtn.disabled) return; 
       submitBtn.disabled = true;
       submitBtn.textContent = '提交中...';
 
@@ -137,38 +132,27 @@
 
       if (!city || !mbti) {
         alert('请填写完整信息后再提交。');
-        resetButton();
+        submitBtn.disabled = false;
+        submitBtn.textContent = '开始分析';
         return;
       }
 
+      // ✅ 直接生成 TaskId，并立即跳转 loading 页面
+      const taskId = `${Date.now()}-${Math.random().toString(36).substring(2, 8)}`;
+      sessionStorage.setItem('pendingTask', JSON.stringify({ birthDate, birthTime, city, mbti, taskId }));
+      window.location.href = `loading.html?taskId=${taskId}`;
+
+      // 异步调用后端 API（不阻塞跳转）
       try {
-        const response = await fetch('/api/submit', {
+        await fetch('/api/submit', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ birthDate, birthTime, city, mbti })
         });
-
-        const data = await response.json();
-
-        if (response.ok && data.taskId) {
-          console.log('【收到 TaskId】', data.taskId);
-          window.location.href = `loading.html?taskId=${data.taskId}`;
-        } else {
-          console.error('【提交失败】状态码:', response.status, '返回内容:', data);
-          alert('提交失败，请稍后重试。');
-          resetButton();
-        }
       } catch (err) {
         console.error('提交出错:', err);
-        alert('提交失败，请稍后重试。');
-        resetButton();
       }
     });
-
-    function resetButton() {
-      submitBtn.disabled = false;
-      submitBtn.textContent = '开始分析';
-    }
   });
 </script>
 </body>
